day 14 counts down to midnight, made ui responsive

--- a/day-14-countdown-timer/index.html
+++ b/day-14-countdown-timer/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="countdown_container">
-        <p class="banner">Coming Soon...</p>
+        <p class="banner">Countdown To Midnight</p>
         <div class="countdown_display">
             <div class="countdown_cell" id="cell1">00</div>
             <div class="countdown_divider">:</div>
